@startuml PresentationClasses

class UserController <<controller>> #PaleGreen;line:Black;text:Black {

}

class LoginView <<view>> #SkyBlue;line:Black;text:Black {

}

class AdminPanelView <<view>> #SkyBlue;line:Black;text:Black {
}

class LoginController <<controller>> #PaleGreen;line:Black;text:Black {
}

class AdminPanelController <<controller>> #PaleGreen;line:Black;text:Black {
}

' from domain layer
abstract User<Domain Layer> <<abstract>> #Pink;line:Black;line.dotted;text:gray {
  # id: long 
  # username: String
  # fullname: String
  # password: String
  # role: Role
  # state: State
}

' from application layer
interface IUserService<Application Layer> <<interface>> #aliceblue;line:blue;text:blue {}

' from domain layer
enum Role<Domain Layer> <<enumeration>> #LightBlue;line:Black;text:Black {
  Administrator
  Patient
  ClinicalStaff
  AppointmentManager
}

UserController ..> User
UserController -> IUserService
LoginView <..> AdminPanelView
LoginController ..> Role
AdminPanelController "1..1" -> "1..1" AdminPanelView : use
LoginController "1..1" -> "1..1" LoginView : use
LoginController "1..1" -> "1..1" IUserService : use

@enduml